Added font awesome, completed preliminary logo

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,13 @@ code {
 .App {
   text-align: center;
 }
+
+@font-face {
+  font-family: 'Leawood';
+  src: url( './fonts/LeawoodStd-Book.otf') format('truetype');
+}
+
+.logo {
+  font-family: 'Leawood';
+}
+
