--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -25,3 +29,6 @@ code {
   font-family: 'Leawood';
 }
 
+.weather-input-container *  {
+  margin-right: .5em;
+}
